--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -1,5 +1,22 @@
-- name: Run Tests
-  run: |
-    echo "Running tests..."
-    # Simulate test success
-    exit 0
+name: Run Tests
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Run tests
+        run: |
+          echo "Running tests..."
+          exit 0 .
